[gd_scene load_steps=23 format=2]

[ext_resource path="res://Art/Boss/bossMachine-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Shaders/hit_flash.gdshader" type="Shader" id=2]
[ext_resource path="res://Code/Properties/stats.gd" type="Script" id=3]
[ext_resource path="res://Code/Properties/HurtBox/hurt_box.gd" type="Script" id=4]
[ext_resource path="res://Code/Effects/generate_particle.gd" type="Script" id=5]
[ext_resource path="res://Code/Boss/boss_turret.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Boss/BossItemDestroy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Boss/BossTurretDeath.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Boss/BossItemProjectile.tscn" type="PackedScene" id=9]

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false
shader_param/colour = Color( 0.917647, 0.309804, 0.211765, 1 )

[sub_resource type="Animation" id=22]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turret_attack"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Start"
length = 0.2
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Start"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=1]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 576, 90 )
states/Start/node = SubResource( 6 )
states/Start/position = Vector2( 371, 90 )
transitions = [ "Start", "Idle", SubResource( 7 ) ]
start_node = "Start"

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 13.5 )

[node name="BossTurret" type="StaticBody2D"]
script = ExtResource( 6 )
death_effect = ExtResource( 7 )
death_particle = ExtResource( 8 )
boss_projectile = ExtResource( 9 )
turret_time = 5

[node name="Stats" type="Node" parent="."]
script = ExtResource( 3 )
max_health = 2

[node name="ParticleGenerator" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ParticlePosition" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 17 )
position = Vector2( -2, 0 )
texture = ExtResource( 1 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 22 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 21 )
anims/Start = SubResource( 16 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 1 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 2 )

[node name="HitFlash" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 19 )
anims/Start = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 18 )
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource( 4 )
entity_stats = NodePath("../Stats")
hit_flash = NodePath("../HitFlash")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_HurtBox_area_entered"]
